# Surface-scan-demo

./: CMakeLists.txt  README.md  box_sampled_n.ply  package.xml
include/: polyhedron.h  utils.h
src/: surface_scan_demo.cpp
